--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,16 @@
-.App {
+body {
   text-align: center;
+  background-color: #ebeff1;
 }
+
+/* 
+
+colors: 
+dark blue #232b53
+light teal #6bb4b6
+dark teal #19898e
+light orange #f99295
+dark orange #f8777c
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +45,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
