--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,15 @@ body {
   background-color: #ebeff1;
 }
 
+.link {
+  color: inherit;
+  text-decoration: inherit;  
+}
+
+.dropdown-menu > li {
+  margin-left: 10px;
+}
+
 /* 
 
 colors: 
